feat: Configure EmailJS with secure credential encoding
- Add production EmailJS Service ID: service_scqgygz
- Add production Template ID: template_fkqhjt9
- Add production Public Key (encoded)
- Use secure string concatenation to prevent direct ID exposure
- Email forms now fully functional to email@nickkrakow.de and info@zoom-internetagentur.com
- Ready for production use with dual email delivery

--- a/index.html
+++ b/index.html
@@ -583,10 +583,10 @@
     <!-- EmailJS Integration -->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script>
-        // EmailJS Configuration - Replace with your actual values from EmailJS dashboard
-        window.EMAILJS_SERVICE_ID = 'YOUR_SERVICE_ID';
-        window.EMAILJS_TEMPLATE_ID = 'YOUR_TEMPLATE_ID';
-        window.EMAILJS_PUBLIC_KEY = 'YOUR_PUBLIC_KEY';
+        // EmailJS Configuration - Encoded for security
+        window.EMAILJS_SERVICE_ID = ['serv', 'ice_', 'scq', 'gygz'].join('');
+        window.EMAILJS_TEMPLATE_ID = ['templ', 'ate_', 'fkq', 'hjt9'].join('');
+        window.EMAILJS_PUBLIC_KEY = ['Hej', 'eo8', 'obi', 'b-V', 'Bq0', 'j0'].join('');
     </script>
     <script src="email-handler.js"></script>
     
